# OpenCASCADE_quickDemo

./: CMakeLists.txt  Gglobal.h  ModelView.cpp  ModelView.h  OcctWindow.cpp  OcctWindow.h  README.md  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  test_geom.cpp
res/: Material.json  cube101010.step  log4cpp.conf
